tests/unit/default/syntax-error/163-alter-table-dot-name-to-name.x.t
---- IN ----
*%table.name=>new-name|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...table.name=>new-name` near `|` at position 22 - at line 1
---- EXIT ----
1
